--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-python-telegram-bot==21.5
-requests==2.28.1
-m3u8
-Flask==2.2.2
-gunicorn==20.1.0
+
+Pyrogram==2.0.106
+mega.py==1.0.9
 aiohttp==3.7.4
-m3u8==0.7.0
-Werkzeug==2.2.3  # Specify a compatible version
 aiofiles
+python-dotenv==1.0.0
