--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 python-telegram-bot==21.7
 pycryptodome==3.21.0
-mega.py
-aiofiles
+mega.py==1.0.8
+aiofiles==24.1.0
 tenacity==6.3.1
-requests
-
+requests==2.32.3
